<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/apbLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/apblogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerSetup"
            android:textAllCaps="true"
            android:layout_marginTop="-10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regis_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regis_secretKey"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorOtherAccent2"
            android:textColor="@color/colorOtherAccent2"
            android:hint="@string/secrete_key"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <EditText
            android:id="@+id/regis_email1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outline"
            android:textColorHint="@color/colorOtherAccent2"
            android:textColor="@color/colorOtherAccent2"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <Button
            android:id="@+id/register_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:enabled="true"
            android:backgroundTint="@color/colorOtherAccent2"
            android:textColor="@color/white"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group"
            app:layout_constraintVertical_bias="0.397" />

        <TextView
            android:id="@+id/already_account1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/already_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_btn"
            app:layout_constraintVertical_bias="0.361" />



    </LinearLayout>

</LinearLayout>